# dashboard_ai

./: .env  app.py  dashboard-drug-2.html  dashboard-drug-2_plan.json  dashboard-drug-basic.html  dashboard-drug-basic_plan.json  dashboard-drugs.html  dashboard-drugs_plan.json  dashboard.html  dashboard.py  dashboard_plan.json  dashbopard-testing.html  dashbopard-testing_plan.json  main.py  pyproject.toml  requirements.txt  stapp.py
csvs/: drugdata.csv  dummy_drug_data.csv  dummy_marketing_data.csv  sample_sales_data.csv  updated_names.csv
dashboards/: dashboard-test-drugs.html  dashboard-test-drugs_plan.json  dashboard-test-financial.html  dashboard-test-financial_plan.json
